sna: Continue to reprobe for ZaphodHeads with a mixed up configuration

Fixes regresion from
commit 35b03b3fe6213eb3e08f05efe3428bd6bc5421d2
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Mar 28 09:14:59 2014 +0000

    sna: Virtual CRTCs are last, so break loops early

as the conflicting Zaphod detection requires on searching all potential
CRTCs without finding the match. By breaking early on the virtual CRTC,
we concluded that the setup was actually valid, but disabled.

Reported-by: Nick Bowler <nbowler@draconx.ca>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77156
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>